[package]
name = "kb2040-headtrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adafruit-kb2040 = { version = "0.7.0", features = ["critical-section-impl"] }
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-alloc = { version = "0.5.1" }
fugit = "0.3.7"
nb = "1.1"
panic-halt = "0.2.0"
smart-leds = "0.3.0"
ws2812-pio = "0.7.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
arrayvec = { version = "0.7.4", default-features = false }
bno080 = { path = "../bno080", version = "0.1.4" }
bbqueue = { version = "0.5.1", features = ["thumbv6"] }
quaternion-core = { version = "0.5.0", default-features = false, features = ["libm"] }
